# EPSMiM

./: .gitignore  README.md
lab-1/: CMakeLists.txt  config.json  perf-analysis.sh  plot.gpi  plot2.gpi  res.txt  roofline-2.sh  roofline-4.sh  roofline.sh
lab-1/profile/: profile-script.sh
lab-1/src/: heat_source.hpp  heat_source_circle.cpp  heat_source_circle.hpp  main.cpp  poisson_equation_solver.cpp  poisson_equation_solver.hpp
lab-1/src/common/: aligned_allocator.hpp  heat_source_circle.cpp  heat_source_circle.hpp  main.cpp  poisson_equation_solver.hpp
lab-1/src/lab-1/: poisson_equation_solver.cpp
lab-1/src/lab-2/: aligned_allocator.hpp  poisson_equation_solver.cpp  poisson_equation_solver.hpp
lab-1/src/lab-3/: front_front_along_array.cpp  front_front_along_array.hpp  front_moving_along_array.cpp  front_moving_along_array.hpp  poisson_equation_solver.cpp  poisson_equation_solver.hpp
lab-1/src/lab-4/: poisson_equation_solver.cpp  poisson_equation_solver.hpp
lab-1/src/lab-4/front/: front_abstract.cpp  front_abstract.hpp  front_left_part.cpp  front_left_part.hpp  front_middle_part.cpp  front_middle_part.hpp  front_right_part.cpp  front_right_part.hpp
lab-1/src/lab-4/front/left/: front_left_part.cpp  front_left_part.hpp
lab-1/src/lab-4/front/middle/: front_middle_part.cpp  front_middle_part.hpp
lab-1/src/lab-4/front/right/: front_right_part.cpp  front_right_part.hpp
lab-1/src/lab-4/window/: window_abstract.cpp  window_abstract.hpp
lab-1/src/lab-4/window/left/: window_left_part.cpp  window_left_part.hpp
lab-1/src/lab-4/window/middle/: window_middle_part.cpp  window_middle_part.hpp
lab-1/src/lab-4/window/right/: window_right_part.cpp  window_right_part.hpp
lab-1/stuff/: main.cpp  stuff.cpp
